--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-/* shared styles */
+/* shared styles start */
+
 * {
   font-family: "Work Sans", sans-serif;
 }
@@ -21,7 +22,41 @@
   cursor: pointer;
 }
 
-/* header styles */
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+section {
+  margin-top: 140px;
+}
+
+.section_title {
+  color: var(--Dark-01, #131313);
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.section_description {
+  color: var(--Dark-03, #727272);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+
+.text_gray {
+  color: #727272;
+}
+.text_primary {
+  color: #ff900e;
+}
+
+/* shared styles end */
+
+/* header styles start*/
+
 header {
   background-color: rgba(255, 144, 14, 0.1);
   padding: 50px 225px;
@@ -79,22 +114,107 @@ header img {
   width: 100%;
   margin-top: 50px;
 }
+/* header styles end*/
+/* quick list styles start*/
 
-/* Responsive with media query */
+.quick_list {
+  display: flex;
+  align-items: center;
+  gap: 80px;
+}
+.quick_list_img_container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+/* quick list styles end*/
 
+/* features list styles start*/
+.features {
+  display: flex;
+  align-items: center;
+  gap: 140px;
+}
+
+.features .section_title {
+  border-left: 5px solid #ff900e;
+  padding-left: 21px;
+}
+
+.feature_sub_title {
+  color: #131313;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.feature_card {
+  padding: 30px;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  margin-top: 20px;
+}
+
+/* features list styles end*/
+
+/*====================== Responsive with media query =====================*/
+/* for mobile */
 @media screen and (max-width: 576px) {
   header {
     padding: 20px 70px;
   }
-  nav {
+  nav,
+  .quick_list,
+  .features {
     flex-direction: column;
+  }
+  .quick_list_info_container,
+  .features {
+    text-align: center;
+    padding: 0 10px;
+  }
+  .features .section_title {
+    border: none;
+  }
+  .feature_img img {
+    width: 90%;
+  }
+  .quick_list_img_container {
+    grid-template-columns: 1fr;
   }
 }
+
+/* for tablate  */
 @media screen and (min-width: 577px) and (max-width: 992px) {
   header {
-    padding: 20px 70px;
+    padding: 15px 70px;
   }
-  nav {
+  nav,
+  .quick_list,
+  .features {
     flex-direction: column;
+  }
+  .quick_list_img_container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0 10px;
+  }
+  /* .quick_list_info_container {
+    text-align: center;
+    padding: 0 10px;
+  } */
+
+  .quick_list_info_container,
+  .features {
+    text-align: center;
+    padding: 0 20px;
+  }
+  /* .features .section_title {
+    border: none;
+  } */
+
+  .feature_img img {
+    width: 100%;
   }
 }
