some facts,sponsors and footer added with small and medium device responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ section {
 }
 
 .section_title {
-  color: var(--Dark-01, #131313);
+  color: #131313;
   font-size: 45px;
   font-style: normal;
   font-weight: 700;
@@ -39,7 +39,7 @@ section {
 }
 
 .section_description {
-  color: var(--Dark-03, #727272);
+  color: #727272;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -115,6 +115,7 @@ header img {
   margin-top: 50px;
 }
 /* header styles end*/
+
 /* quick list styles start*/
 
 .quick_list {
@@ -157,6 +158,71 @@ header img {
 
 /* features list styles end*/
 
+/* some facts  styles start*/
+
+.some_facts_card_container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 100px;
+}
+
+.some_facts_card {
+  padding: 2rem;
+  border: 1px solid #ff900e;
+  text-align: center;
+  border-radius: 8px;
+}
+.some_facts_card h3 {
+  color: #424242;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.some_facts_card p {
+  color: #727272;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 0;
+}
+
+/* some facts  styles end*/
+
+/* sponsors  styles start*/
+
+.sponsors {
+  text-align: center;
+}
+.sponsors_container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+
+/* footer style start */
+
+footer {
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: #fff4e7;
+  margin-top: 140px;
+}
+footer p {
+  color: #424242;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 40px 0;
+}
+
+/* footer style end */
+
+/* sponsors  styles end*/
+
 /*====================== Responsive with media query =====================*/
 /* for mobile */
 @media screen and (max-width: 576px) {
@@ -165,11 +231,21 @@ header img {
   }
   nav,
   .quick_list,
-  .features {
+  .features,
+  .some_facts_card_container,
+  .sponsors_container {
     flex-direction: column;
   }
+  .sponsors_container img {
+    padding: 50px;
+  }
+
+  .some_facts_card {
+    margin: 20px;
+  }
   .quick_list_info_container,
-  .features {
+  .features,
+  .some_facts {
     text-align: center;
     padding: 0 10px;
   }
@@ -194,25 +270,28 @@ header img {
   .features {
     flex-direction: column;
   }
+  .sponsors_container {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
   .quick_list_img_container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding: 0 10px;
   }
-  /* .quick_list_info_container {
-    text-align: center;
-    padding: 0 10px;
-  } */
+  .some_facts_card_container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+  }
 
   .quick_list_info_container,
-  .features {
+  .features,
+  .some_facts {
     text-align: center;
     padding: 0 20px;
   }
-  /* .features .section_title {
-    border: none;
-  } */
 
   .feature_img img {
     width: 100%;
